--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       content="./assets/favicon/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="stylesheet" href="/assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <!-- Style -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="stylesheet" href="./assets/font/stylesheet.css" />
