Fix bug blog item detail margin & update mailto tel feature

--- a/index.html
+++ b/index.html
@@ -444,14 +444,17 @@
                     class="blog-thumb"
                   />
                 </a>
-                <div class="blog-date">21 November 2021</div>
-                <a href="#!">
-                  <h3 class="blog-title">
-                    How to become a pro web designer in 2022 and get remot job?
-                  </h3>
-                </a>
-                <div class="blog-btn">
-                  <a class="blog-link" href="#!">Read More</a>
+                <div class="blog-detail-container">
+                  <div class="blog-date">21 November 2021</div>
+                  <a href="#!">
+                    <h3 class="blog-title">
+                      How to become a pro web designer in 2022 and get remot
+                      job?
+                    </h3>
+                  </a>
+                  <div class="blog-btn">
+                    <a class="blog-link" href="#!">Read More</a>
+                  </div>
                 </div>
               </div>
               <!-- Blog Item 2 -->
@@ -463,14 +466,17 @@
                     class="blog-thumb"
                   />
                 </a>
-                <div class="blog-date">21 November 2021</div>
-                <a href="#!">
-                  <h3 class="blog-title">
-                    How to become a pro web designer in 2022 and get remot job?
-                  </h3>
-                </a>
-                <div class="blog-btn">
-                  <a class="blog-link" href="#!">Read More</a>
+                <div class="blog-detail-container">
+                  <div class="blog-date">21 November 2021</div>
+                  <a href="#!">
+                    <h3 class="blog-title">
+                      How to become a pro web designer in 2022 and get remot
+                      job?
+                    </h3>
+                  </a>
+                  <div class="blog-btn">
+                    <a class="blog-link" href="#!">Read More</a>
+                  </div>
                 </div>
               </div>
               <!-- Blog Item 3 -->
@@ -482,14 +488,17 @@
                     class="blog-thumb"
                   />
                 </a>
-                <div class="blog-date">21 November 2021</div>
-                <a href="#!">
-                  <h3 class="blog-title">
-                    How to become a pro web designer in 2022 and get remot job?
-                  </h3>
-                </a>
-                <div class="blog-btn">
-                  <a class="blog-link" href="#!">Read More</a>
+                <div class="blog-detail-container">
+                  <div class="blog-date">21 November 2021</div>
+                  <a href="#!">
+                    <h3 class="blog-title">
+                      How to become a pro web designer in 2022 and get remot
+                      job?
+                    </h3>
+                  </a>
+                  <div class="blog-btn">
+                    <a class="blog-link" href="#!">Read More</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -575,9 +584,17 @@
                 <li class="item-desc">
                   <span>Location:</span> 27 Division St, New York, NY 10002, USA
                 </li>
-                <li class="item-desc"><span>Email:</span> email@gmail.com</li>
                 <li class="item-desc">
-                  <span>Phone:</span> + 000 1234 567 890
+                  <span>Email:</span
+                  ><a style="color: #bfbcb2" href="mailto:email@gmail.com">
+                    email@gmail.com</a
+                  >
+                </li>
+                <li class="item-desc">
+                  <span>Phone:</span
+                  ><a style="color: #bfbcb2" href="tel: + 000 1234 567 890">
+                    + 000 1234 567 890</a
+                  >
                 </li>
               </div>
             </ul>
